# life

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
src/life/: auth.py  config.py  main.py
src/life/models/: shipment.py
src/life/routers/: shipments.py  webhooks.py
src/life/services/: email_parser.py  tracking.py
src/life/storage/: database.py
src/life/tasks/: scheduler.py
src/life/templates/: base.html  login.html  shipments.html
